--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
 				
 				//第二页面
 				var s = 3;
-				var arr = [0,7,7,1,7,7,2,7,7,7,7,3,7,7,7,4,7,7,7,7,5,7,7,6,7,7];
+				var arr = [0,7,7,1,7,7,2,7,7,7,7,3,7,7,7,4,7,7,7,7,5,7,7,6,7,7,7,7,7,7];
 				$(".jg_01 img").eq(8).on("click",function(){
-					var j = parseInt(Math.random()*27);
+					var j = parseInt(Math.random()*(arr.length+1));
 					$(".cmeng").css("display","block");
 					if(s<=0){
+						$(".myx").css("display","block");
 						$(".buz_02").css("display","block");
+						$(".tank").css("display","none");
+						$(".buz").css("display","none");
 						s=0;
 						clearInterval(jiu.time);
 					}else{
@@ -197,7 +200,7 @@
 			</div>
 			<div class="buz_02">
 			    <p>提示</p>
-				<p style="color: red;">资格已用完！</p>
+				<p style="color: red;">资格已用完,请下次再来！</p>
 				<hr style="margin-top: 10px;"/>
 				<p><span class="qd_03">确定</span></p>
 			</div>
